--- a/app/br/ufes/scap/views/erro.scala.html
+++ b/app/br/ufes/scap/views/erro.scala.html
@@ -7,14 +7,14 @@
 <br>
 <br>
     <fieldset>
-<h1><font color="white">Usuário não autorizado</font></h1>
+<h1><font color="white" face="trebuchet ms">Usuário não autorizado</font></h1>
 
-<p><font color="white">Você não tem autorização para executar essa ação ou não está devidamente logado no sistema.</font></p>
+<p><font color="white" face="trebuchet ms">Você não tem autorização para executar essa ação ou não está devidamente logado no sistema.</font></p>
 
-<form role="form" action='@br.ufes.scap.controllers.routes.LoginController.login' method="get" align="center">
-                <button type="submit" >Efetue seu login.</button>
-
+<form align="center">
+<a href="@br.ufes.scap.controllers.routes.LoginController.login"><font color="yellow" face="trebuchet ms">Clique aqui para efetuar seu login</font></a href>
 </form>
+
 </fieldset>
 </body>
 </html>
