--- a/app/br/ufes/scap/views/listPareceres.scala.html
+++ b/app/br/ufes/scap/views/listPareceres.scala.html
@@ -5,18 +5,11 @@
 
 <a href="@br.ufes.scap.controllers.routes.LoginController.logout">Logout</a>
 
-<head>
-<style>
-table, th, td {
-  border: 1px solid black;
-}
-</style>
-</head>
+<body bgcolor="teal"  >
+<h1><font color="white" face="trebuchet ms"> Pareceres</h1></font>
 
-<body>
-<h2>Pareceres</h2>
-
-<h1> Pareceres internos do DI </h1>
+<fieldset>
+<h1><font color="white" face="trebuchet ms"> Pareceres internos do DI </h1></font>
  
 <table style="width:100%">
                 <tr>
@@ -32,6 +25,7 @@ table, th, td {
                 </tr>
                 }
 </table>
+<fieldset>
 <br>
 <br>
 <br>
