--- a/app/br/ufes/scap/views/login.scala.html
+++ b/app/br/ufes/scap/views/login.scala.html
@@ -7,22 +7,21 @@
         </p>
 	}
 
-<body bgcolor="teal">
+<body bgcolor="teal"  >
 
-<form role="form" action='@br.ufes.scap.controllers.routes.LoginController.login()' method="post"
-      align="center" autocomplete="off">
+<form role="form" action='@br.ufes.scap.controllers.routes.LoginController.login()' method="post" align="center">
 
-    <fieldset class="user-fieldset">
+    <fieldset>
 
-                <h1><font color="white">Login</font></h1>
+                <h1><font face="trebuchet ms" color="white">Login</font></h1>
 
- 		    <font color="white">Matricula &nbsp;&nbsp </font>  
+ 		    <font color="white" face="trebuchet ms">Matricula &nbsp;&nbsp </font>  
                 <input type="text" id="matricula" name="matricula" value="" placeholder="matricula" required>
                 <br>
 
 		<br>
 
-               <font color="white"> Senha &nbsp;&nbsp </font> 
+               <font color="white" face="trebuchet ms"> Senha &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp </font> 
                 <input type="password" id="password" name="password" value="" placeholder="senha" required>
                 <br>
 
