--- a/app/br/ufes/scap/views/main.scala.html
+++ b/app/br/ufes/scap/views/main.scala.html
@@ -24,10 +24,9 @@
     /*YOUR CSS SHOULD LOOK LIKE THIS*/
 
 
-
 /* unvisited link grey */
 #top-menu a:link {
-	color: #777;
+	color: yellow;
 
 	display: block;
 	padding: 2px 0px 2px 10px;
@@ -39,16 +38,16 @@
 }
 /* mouse over link blue */
 #top-menu a:hover {
-	background-color: black;
+	background-color: yellow;
 	border-left: thick solid red;
 }
 /* selected link blue */
 #top-menu a:active {
-	color: #0CF;
+	color: yellow;
 }
 /* !IMPORTANT ONLY ADD THIS CLASS TO YOUR ACTIVE PAGE LINK ( Color Blue )*/
 .activePage a {
-	color: #0CF !important
+	color: yellow !important
 }
 </style>
 
@@ -57,7 +56,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1><font color="white"> SCAP - Sistema de Controle de Afastamento de Professores</font>  </h1>
+                    <h1><font color="white" face="trebuchet ms"> SCAP - Sistema de Controle de Afastamento de Professores</font>  </h1>
                     @content
                 </div>
             </div>
